<resources>
    <string name="app_version_name">60h.131</string>
    <string name="label_shared_user">Birding Via Mic</string>
    <string name="add_rename_title">Name</string>
    <string name="add_button_label">Add</string>
    <string name="add_species_label">Add Species</string>
    <string name="add_web_label">Add Web</string>
    <string name="app_name">Birding Via Mic</string>
    <string name="autoFilter_summary">true = Use an Auto Filter on the Frequency and Noise.
	    \nfalse = Use the manually placed Frequency and Filter cutoffs from the Edit screen. </string>
    <string name="auto_filter_title">Auto Filter</string>
    <string name="sample_rate_summary">true = Record at sample rate of 44100.
	    \nfalse = Record at sample rate of 22050. </string>
    <string name="sample_rate_title">Sample Rate</string>
    <string name="backup_database_result">Click the Backup button to export this current running Birding Via Mic Define folder (containing the Database)
            and Song folder (containing the Songs) to the Android Download folder.\n
            Warning -- The Download folder is the only location Backup knows and will overwrite any Define or Song folder that is there.\n
            Rename or move those folders from the Download folder if you want to keep them.\n
            You can exit and not Backup the folders\n
            Else, clicking Backup will start the process.</string>
    <string name="backup_label">Backup</string>
    <string name="begin_label">begin</string>
    <string name="commonname_title">Name</string>
    <string name="cancel_label">Cancel</string>
    <string name="comments_label">\
        Please register.
        The following will be sent if you click the "Register Now" button.
        Please add any errors or problems in the comments section below.
        Do NOT add any personal information in the comments. Thank you
        </string>
    <string name="custom_path">xxx</string>
    <string name="currentscore">Species Identified:</string>
    <string name="debug_title">Debug</string>
    <string name="debug_summary">true = Use debug.
	    \nfalse = Debug off. </string>
    <string name="decode_file_label">DecodeFile</string>
    <string name="define_label">Def</string>
    <string name="delete_label">Delete</string>
    <string name="dismiss_label">Done</string>
    <string name="done_label">Done</string>
    <string name="edit_label">Edit</string>
    <string name="edit_species_title">Edit Species Name:</string>
    <string name="end_label">end</string>
    <string name="enhance_mic_label">Enhance Quality</string>
    <string name="enhance_mic_summary">true - Enhance a low quality recording. Does not improve the sound quality. It may improve the identification analysis.
	    \nfalse = Analyze the recording as is.  </string>
    <string name="enhance_mic_title">Enhance Quality</string>
    <string name="exclude_label">Exclude</string>
    <string name="existing_name_title">Existing File Name:</string>
    <string name="existing_region_title">Existing Region:</string>
    <string name="export_folders_result">Backup Folders Results:</string>
    <string name="get_cnn_id">GetCnnId</string>
    <string name="go_label">Go</string>
    <string name="help_label">Help</string>
    <string name="help_title">Help</string>
    <string name="high_label">high</string>
    <string name="identify_label">Id</string>
    <string name="identify_title">Identify</string>
    <string name="is_null"></string>
    <string name="later_label">Later</string>
    <string name="length_each_record_title">Length Each Record</string>
    <string name="linen">#FAF0E6</string>
    <string name="link_label">Link:</string>
    <string name="my_list_label">My List</string>
    <string name="listen_label">Listen</string>
    <string name="load_now_label">Load Now</string>
    <string name="loading">Loading</string>
    <string name="load_definitions_title">Load Definitions</string>
    <string name="load_definitions_label">is Load Definition</string>
    <string name="load_definitions_summary">true = Load the definition for the birds selected without playing the file first.
	    \nfalse = Do not automatically load the definition for the birds selected. </string>
    <string name="location_label">Location</string>
    <string name="location_title">Location</string>
    <string name="low_label">low</string>
    <string name="low_freq_cutoff_title">Low Frequency Cutoff</string>
    <string name="main_label">Birding Via Mic</string>
    <string name="main_title">Home</string>
    <string name="manual_location_title">Manual Location</string>
    <string name="meta_data">Meta Data</string>
    <string name="mic0_label">0 Default</string>
    <string name="mic1_label">1 Mic</string>
    <string name="mic5_label">5 Camcorder</string>
    <string name="mic6_label">6 Voice Recognition</string>
    <string name="my_list">My List</string>
    <string name="name_label">Name</string>
    <string name="never_label">Never</string>
    <string name="newname_title">File Name:</string>
    <string name="new_commonname_title">Common Name:</string>
    <string name="new_redlist_title">Red List:</string>
    <string name="new_region_title">Region:</string>
    <string name="new_subregion_title">Sub Region:</string>
    <string name="new_species_title">Species:</string>
    <string name="new_web_title">Web:</string>
    <string name="no_label">No</string>
    <string name="ok_label">Ok</string>
    <string name="options_label">Options</string>
    <string name="options_title">Options</string>
    <string name="path4_define">Android/data/com.modelsw.birdingviamicnw/files/Define</string>
    <string name="path5_define">Android/data/com.modelsw.birdingviamicow/files/Define</string>
    <string name="path6_define">Android/data/com.modelsw.birdingviamicoa/files/Define</string>
    <string name="path7_define">Android/data/com.modelsw.birdingviamicnac/files/Define</string>
    <string name="path1_label">Internal Songs</string>
    <string name="path2_label">Download</string>
    <string name="path4_label">Birding Via Mic -- New World</string>
    <string name="path5_label">Birding Via Mic -- Old World</string>
    <string name="path6_label">Birding Via Mic -- Orient Australasia</string>
    <string name="path7_label">Birding Via Mic -- North America Common</string>
    <string name="path99_label">Custom (Enter path below)</string>
    <string name="path1_location">Internal</string>
    <string name="path2_location">Download</string>
    <string name="path4_location">Android/data/com.modelsw.birdingviamicnw/files/Song</string>
    <string name="path5_location">Android/data/com.modelsw.birdingviamicow/files/Song</string>
    <string name="path6_location">Android/data/com.modelsw.birdingviamicoa/files/Song</string>
    <string name="path7_location">Android/data/com.modelsw.birdingviamicnac/files/Song</string>
    <string name="path99_location">Custom (Enter path below)</string>
    <string name="location_permission_label">
        ACCESS_FINE_LOCATION and ACCESS_COARSE_LOCATION are needed if you use Location to limit the lists.
    </string>
    <string name="audio_permission_label">
        RECORD_AUDIO is needed for you to be able to record the birds and thus be able to recognize them.
    </string>
    <string name="internet_permission_label">
        INTERNET is needed to display the birds identified or download bird songs.
    </string>
    <string name="storage_permission_label">
        MANAGE_EXTERNAL_STORAGE is needed to read the songs from the Birding Via Mic apps NW, OW, OA, and NAC.\n
        READ_EXTERNAL_STORAGE is needed to read the Download folder.\n
        WRITE_EXTERNAL_STORAGE is needed to save a file in the Download folder.\n
        These three permissions (MANAGE, READ and WRITE) plus INTERNET are needed to select, download, and import songs to the app.
    </string>
    <string name="permission_title">Permissions</string>
    <string name="phone_location_title">Phone Location</string>
    <string name="play_label">Play</string>
    <string name="playsong_title">Play</string>
    <string name="record_label">Record</string>
    <string name="recordsong_title">Record</string>
    <string name="redlist_label">Red List</string>
    <string name="redlist_label1">NE : Not Evaluated</string>
    <string name="redlist_label2">DD : Data Deficient</string>
    <string name="redlist_label3">LC : Least Concern</string>
    <string name="redlist_label4">NT : Near Threatened</string>
    <string name="redlist_label5">VU : Vulnerable</string>
    <string name="redlist_label6">EN : Endangered</string>
    <string name="redlist_label7">CR : Critically Endangered</string>
    <string name="redlist_label8">EW : Extinct in the Wild</string>
    <string name="redlist_label9">EX : Extinct</string>
    <string name="redlist_label10">\? : Unknown (Internal)</string>
    <string name="register_title">Register</string>
    <string name="register_label">Register</string>
    <string name="restore_label">Restore</string>
    <string name="restore_folders_result">Restore copies the Define Folder (containing the Database) and the Song Folder (containing the songs) from the Dounload folder back to Birding Via Mic application.
        This restores the selected Options, Regions, Redlist, Location, WebSites, Identified and Defined songs that you had at the time you Backed up.
        It will upgrade these items to reflect a new species list if one exists. Restore takes about two and a half minutes to complete if a new species exists.</string>
    <string name="restore_database_result">Restore Folders Results:</string>
    <string name="return_label">Return To Main</string>
    <string name="region_label">Region</string>
    <string name="region_title">Region</string>
    <string name="register_now_label">Register Now</string>
    <string name="rename_species_label">Rename Species</string>
    <string name="rename_web_label">Rename Web</string>
    <string name="rename_song">Rename Song</string>
    <string name="search_label">Search</string>
    <string name="selected_area_title">Selected Areas</string>
    <string name="save_label">Save</string>
    <string name="save_pcm_data_title">Save Pcm Data</string>
    <string name="save_pcm_data_summary">true = save the audioData from the file just decoded
	    \nfalse = Do not save the audioData. </string>
    <string name="sd_card_check_title">"Check for External SD Card"</string>
    <string name="sc_card_check_summary">sd card summary</string>
    <string name="selectpath_label">Select Path:</string>
    <string name="selectweb_label">Web Sites:</string>
    <string name="selectmic_label">Mic Options:</string>
    <string name="select_songpath_label">Path</string>
    <string name="select_specie_label">Select Specie</string>
    <string name="share">Share</string>
    <string name="show_definitions_title">Show Definition</string>
    <string name="show_definitions_summary">true = show the definition for the file just defined
	    \nfalse = Do not show the definition. </string>
    <string name="show_detail_title">Show Spectrogram</string>
    <string name="show_detail_summary">true = show the fft spectrogram for the file just defined
	    \nfalse = Do not show the spectrogram. </string>
    <string name="start_cnn_lable">StartCnn</string>
    <string name="run_cnn_model_title">Run the CNN Model</string>
    <string name="run_cnn_model_summary">true = Run the external CNN Model
	    \nfalse = Do not run the external CNN Model. </string>
    <string name="sienna">#A0522D</string>
    <string name="sign_in">Sign In</string>
    <string name="signed_in_fmt">signed in</string>
    <string name="signed_out">signed out</string>
    <string name="csv_save_result">CSV Save Result:</string>
    <string name="song_label">Songs</string>
    <string name="use_location_title">Use Location</string>
    <string name="update_label">Update</string>
</resources>