<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    android:background="#ff000000"    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/linen" >
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:screenOrientation="portrait"
        android:layout_below="@id/toolbar"
        android:scrollbars="none">

        <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/spacer"
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:textColor="@color/linen"
            android:textSize="16sp"
            android:text="@string/redlist_label1"
            android:id="@+id/redlist_check0" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:textColor="@color/linen"
            android:textSize="16sp"
            android:text="@string/redlist_label2"
            android:id="@+id/redlist_check1" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:textColor="@color/linen"
            android:textSize="16sp"
            android:text="@string/redlist_label3"
            android:id="@+id/redlist_check2" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:textColor="@color/linen"
            android:textSize="16sp"
            android:text="@string/redlist_label4"
            android:id="@+id/redlist_check3" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:textColor="@color/linen"
            android:textSize="16sp"
            android:text="@string/redlist_label5"
            android:id="@+id/redlist_check4" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:textColor="@color/linen"
            android:textSize="16sp"
            android:text="@string/redlist_label6"
            android:id="@+id/redlist_check5" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:textColor="@color/linen"
            android:textSize="16sp"
            android:text="@string/redlist_label7"
            android:id="@+id/redlist_check6" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:textColor="@color/linen"
            android:textSize="16sp"
            android:text="@string/redlist_label8"
            android:id="@+id/redlist_check7" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:textColor="@color/linen"
            android:textSize="16sp"
            android:text="@string/redlist_label9"
            android:id="@+id/redlist_check8" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:textColor="@color/linen"
            android:textSize="16sp"
            android:text="@string/redlist_label10"
            android:id="@+id/redlist_check9" />
    </LinearLayout>


    </ScrollView>
    <RelativeLayout
        android:id="@+id/bottom_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <LinearLayout
            android:id="@+id/footer"
            style="@style/ButtonBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/black" >

            <Button
                android:id="@+id/update_button"
                style="@style/ButtonBarButton"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:textColor="@drawable/text_state"
                android:background="@drawable/background_state"
                android:text="@string/update_label"/>

        </LinearLayout>
    </RelativeLayout>



</RelativeLayout>