<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/top"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/linen"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/add_rename_title"
                android:text="@string/add_rename_title"
                android:textSize="20sp"
                android:textColor="@color/teal"
                android:background="@color/linen"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center" />


            <TextView
                android:text="@string/new_commonname_title"
                android:textColor="@color/sienna"
                android:background="@color/linen"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/new_commonname_text"
                android:textColor="@color/white"
                android:background="@color/black"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="10dip"
                android:textSize="16sp"
                android:text=""/>

            <TextView
                android:text="@string/new_species_title"
                android:textColor="@color/sienna"
                android:background="@color/linen"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp" />

            <EditText
                android:id="@+id/new_spec_text"
                android:textColor="@color/white"
                android:background="@color/black"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="10dip"
                android:textSize="16sp"
                android:text=""/>

            <TextView
                android:id="@+id/new_region_title"
                android:text="@string/new_region_title"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:textColor="@color/sienna"
                android:background="@color/linen"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                />

            <Spinner
                android:id="@+id/region_spinner"
                android:layout_marginLeft="3dp"
                android:layout_marginBottom="10dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:text="@string/new_subregion_title"
                android:textColor="@color/sienna"
                android:background="@color/linen"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"  />

            <EditText
                android:id="@+id/new_subregion_text"
                android:textColor="@color/white"
                android:background="@color/black"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="10dip"
                android:textSize="16sp"
                android:text=""/>

            <TextView
                android:id="@+id/new_redlist_title"
                android:text="@string/new_redlist_title"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:textColor="@color/sienna"
                android:background="@color/linen"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                />

            <Spinner
                android:id="@+id/redlist_spinner"
                android:layout_marginLeft="3dp"
                android:layout_marginBottom="10dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bottom_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <LinearLayout
            android:id="@+id/footer"
            style="@style/ButtonBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
            android:id="@+id/cancel_button"
            style="@style/ButtonBarButton"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@drawable/text_state"
            android:background="@drawable/background_state"
            android:layout_margin="1dp"
            android:layout_weight=".5"
            android:text="@string/cancel_label"/>

        <Button
            android:id="@+id/done_button"
            style="@style/ButtonBarButton"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@drawable/text_state"
            android:background="@drawable/background_state"
            android:layout_margin="1dp"
            android:layout_weight=".5"
            android:text="@string/done_label"/>

        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
