<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    android:background="#ff000000"    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/linen" >
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:screenOrientation="portrait"
        android:layout_below="@id/toolbar"
        android:scrollbars="none">

        <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/spacer"
            android:text=""
            android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp" />

        <TextView
            android:id="@+id/result"
            android:text="@string/backup_database_result"
            android:gravity="start"
            android:textColor="@color/linen"
            android:layout_marginLeft="3dip"
            android:layout_marginRight="3dip"
            android:layout_below="@id/spacer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"  />

        <EditText
            android:id="@+id/result1"
            android:text="@string/export_folders_result"
            android:textColor="@color/linen"
            android:layout_marginLeft="3dip"
            android:layout_marginRight="3dip"
            android:layout_below="@id/result"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/result2"
            android:text="@string/csv_save_result"
            android:textColor="@color/linen"
            android:layout_marginLeft="3dip"
            android:layout_marginRight="3dip"
            android:layout_below="@id/result1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp" />

        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/bottom_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <LinearLayout
            android:id="@+id/footer"
            style="@style/ButtonBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/black" >

            <Button
                android:id="@+id/backup_button"
                style="@style/ButtonBarButton"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:textColor="@drawable/text_state"
                android:background="@drawable/background_state"
                android:text="@string/backup_label"/>

        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>